# subscript

./: .gitattributes  .gitignore  CARGO-README.md  Cargo.toml  README.md  run.sh  test.html
apps/SubScript/subscript-app-rs/: Cargo.toml
apps/SubScript/subscript-app-rs/scripts/: build.sh
apps/SubScript/subscript-app-rs/src/: canvas.rs  lib.rs  utils.rs
c-ffi-utils/: Cargo.toml
dev-notes/: PERFORMANCE.md
example-project/: drawings  run.sh  subscript.toml
format-ss-drawing/: Cargo.toml
html-to-subscript/: Cargo.toml  README.md  out.ss  ref.ss  run.sh  test.html  test2.html  test2.ss
html-to-subscript/src/: main.rs
src/: main.rs
ss-app-engine/: Cargo.toml
ss-app-engine-c-api/: Cargo.toml  cbindgen.toml
ss-app-engine/src/: lib.rs  main.rs
ss-app-engine/src/data/: archive.rs  c_ffi_utils.rs  collections.rs  drawing.rs  drawing_impl.rs  git_client.rs  git_client_new.rs  git_db.rs  graphics.rs  graphics_impl.rs  mod.rs  notebook.rs  runtime.rs
ss-app-engine/src/data/drawing/: metal_backend.rs  new_perfect_freehand.rs  perfect_freehand.rs  simplify.rs  skia_backend.rs
ss-app-engine/src/data/notebook/: swift_data_model.rs
ss-app-engine/test/: .gitignore
ss-drawing-lab/: Cargo.toml  LICENSE_MIT  index.html  package-lock.json
ss-drawing-lab/scripts/: open.sh
ss-drawing-lab/src/: lib.rs
ss-drawing-lab/src/view/: canvas.rs  mod.rs  svg.rs
ss-freeform-format/: Cargo.toml
ss-freeform-format/src/: api.rs  format.rs  lib.rs  main.rs  utils.rs
ss-freeform-format/test/: Untitled.ss1-composition
ss-git-client/: Cargo.toml
ss-git-client/src/: data.rs  git2_api.rs  lib.rs
ss-git-client/src/git2_api/: git2_remote.rs
ss-git-client/src/resources/: .gitignore
ss-github-auth/: Cargo.toml
ss-github-auth/src/: lib.rs
ss-notebook-format/: Cargo.toml
ss-notebook-format-c-api/: .gitignore  Cargo.toml  Makefile  cbindgen.toml
ss-notebook-format-c-api/scripts/: build-c-interface.sh
ss-notebook-format-c-api/src/: c_helpers.rs  canvas_runtime.rs  data.rs  global_runtime.rs  lib.rs  main.rs  skia_engine.rs  toolbar_runtime.rs  utils.rs
ss-notebook-format/src/: drawing.rs  graphics.rs  lib.rs  notebook.rs
ss-notebook-format/src/drawing/: basics.rs  cmds.rs
ss-notebook-format/src/drawing/cmds/: perfect_freehand.rs
ss-notebook-format/src/graphics/: basics.rs  canvas.rs  tools.rs
ss-notebook-format/src/graphics/tools/: perfect_freehand.rs
subscript/: Cargo.toml
subscript-ast/: Cargo.toml  source.ss
subscript-ast/src/: cmds.rs  css.rs  data.rs  lib.rs  main.rs  utils.rs
subscript-ast/src/cmds/: apply.rs  data.rs  macros.rs
subscript-ast/src/codegen/: latex_cg.rs  mod.rs
subscript-ast/src/html/: parser.rs
subscript-ast/src/ss_drawing/: format.rs  mod.rs
subscript-ast/src/subscript/: ast.rs  utils.rs
subscript-ast/test/: output.html  sample2.ssd1
subscript-compiler/: Cargo.toml  README.md  other.ss  out-out.html  output.css.map  output.ss  run.sh  sample.html  sample.ss  source.ss
subscript-compiler/assets/: README.md  deps.html  styling.css  styling.css.map  template.html
subscript-compiler/assets/styling/: commands.scss  index.scss  prelude.scss  settings.scss  toc.scss
subscript-compiler/assets/template/: head.html  index.css  index.css.map  ss-runtime.js  template.html
subscript-compiler/examples/: bad_path.rs  frontend.rs  highlight.rs  html.rs  parse_error.rs  parser.rs  toc.rs
subscript-compiler/examples/other/: toc.txt
subscript-compiler/examples/source/: chemistry.txt  electrical-engineering.txt  mathematics.txt
subscript-compiler/scripts/: build.sh
subscript-compiler/src/: cli.rs  cmds.rs  compiler.rs  css.rs  data.rs  dev.rs  lib.rs  main.rs  ss_std.rs  utils.rs
subscript-compiler/src/cmds/: apply.rs  data.rs
subscript-compiler/src/codegen/: html.rs  html_cg.rs  latex_cg.rs  mod.rs
subscript-compiler/src/compiler/: ast.rs  data.rs  mod.rs  parser.rs  watch.rs
subscript-compiler/src/compiler/pass/: core.rs  math.rs  mod.rs  pp_normalize.rs  to_html.rs
subscript-compiler/src/html/: ast.rs  experimental.rs  mod.rs  parser.rs  template.rs  toc.rs  utils.rs
subscript-compiler/src/plugins/: mod.rs  normalize.rs  pre_html.rs
subscript-compiler/src/project/: manifest.rs
subscript-compiler/src/ss/: ast_data.rs  ast_macros.rs  ast_traits.rs  ast_utils.rs  cmd_decl.rs  codegen.rs  env.rs  mod.rs  parser.rs  post_parser.rs  utils.rs
subscript-compiler/src/ss_v1_std/: core.rs  formatting.rs  html_sugar.rs  html_tags.rs  macros.rs  mod.rs  symbolic.rs
subscript-compiler/src/subscript/: ast.rs  mod.rs  parser.rs
subscript-compiler/src/utils/: format.rs  mod.rs
subscript-compiler/test/: Untitled.ss1-composition  Untitled.ss1-drawing  hello.ss
subscript-compiler/test/dir1/: file1.ss
subscript-compiler/test/dir1/a/: a1.ss
subscript-compiler/test/dir1/b/: b1.ss
subscript-compiler/tests/: sub-page.ss
subscript-data/: Cargo.toml  sample.ss  source.ss
subscript-data/src/: cmds.rs  compiler.rs  data.rs  lib.rs  main.rs
subscript-data/src/cmds/: apply.rs  data.rs  macros.rs  mod.rs
subscript-data/src/codegen/: html_cg.rs  latex_cg.rs  mod.rs
subscript-data/src/html/: mod.rs
subscript-data/src/ss_drawing/: api.rs  format.rs  mod.rs
subscript-data/src/subscript/: ast.rs  dev.rs  mod.rs  parser.rs  utils.rs
subscript-data/test/: output.html  sample.ssd1  template.tex  test.ss
subscript-project/: Cargo.toml
subscript-project/src/: data.rs  lib.rs  main.rs  project.rs  settings.rs  template.rs
subscript-project/src/freehand/: format.rs  mod.rs
subscript-web-trinity/: Cargo.toml
subscript-web-trinity/notes/: swc_css.md
subscript-web-trinity/src/: data.rs  html.rs  lib.rs  main.rs
subscript-web-trinity/src/html/: ast.rs
subscript/scripts/: watch.sh
subscript/src/: cli.rs  main.rs
subscript/src/project/: manifest.rs
vectorizable/vectorizable-demo-rs/: Cargo.toml  cbindgen.toml
vectorizable/vectorizable-demo-rs/ffi/include/: vectorizable-demo.h
vectorizable/vectorizable-demo-rs/scripts/: build-c-interface.sh
vectorizable/vectorizable-demo-rs/src/: lib.rs
(+295 files in other folders)
