[workspace]
members = [
    "subscript-compiler",
    "apps/SubScript/subscript-app-rs",
    "ss-app-engine",
    "ss-app-engine-c-api",
    "ss-language-server",
    "ss-freeform-format",
    "html-to-subscript",
    "ss-str-fmt",
    "ss-database",
    "vectorizable",
    "c-ffi-utils",
    "vectorizable/vectorizable-demo-rs",
]

exclude = [
    "local-dev/ss-drawing-lab",
    "local-dev/cavalier_contours",
    "local-dev/cavalier_contours_ffi",
]

[patch.crates-io]
skia-safe = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi"}
skia-bindings = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi"}
