[package]
name = "ss_app_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
plist = "1.3.1"
itertools = "0.10.0"
libc = "0.2.135"
either = "1.8.0"
rand = "0.7.3"
geo = "0.23.0"
parry2d = "0.10.0"
num-traits = "0.2.15"
rayon = "1.5.3"
# skia-safe = "0.55.0"
skia-bindings = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi", features = ['metal']}
skia-safe = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi", features = ['metal']}
simplify-rs = "0.1.3"
octocrab = "0.17.0"
git2 = {version = "0.15.0", features = ['vendored-libgit2', 'vendored-openssl']}
directories-next = "2.0.0"
# git-repository = "0.24.0"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

# [patch.crates-io]
# skia-safe = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi"}
# skia-bindings = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi"}