[package]
authors = ["The RustWasm Developers"]
categories = ["wasm"]
description = "My super awesome Rust, WebAssembly, and Parcel project!"
license = "Apache-2.0/MIT"
name = "rust-parcel"
readme = "./README.md"
repository = "https://github.com/rustwasm/rust-parcel-template"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
either = "1"
cfg-if = "0.1.5"
wasm-bindgen = "0.2.29"
ss_drawing_format = {path = "../ss-drawing-format"}
console_error_panic_hook = {version = "0.1.5", optional = true}
js-sys = "0.3.60"
# geo-offset = "0.3.0"
simplify-polyline = "0.1.0"
# cavalier_contours = "0.2.0"
cavalier_contours = {path = "../cavalier_contours/cavalier_contours"}


[dependencies.web-sys]
version = "0.3.6"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'NodeList',
    'Window',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'DomRect',
    'EventTarget',
    'Event',
    'HtmlCollection',
    'HtmlInputElement',
    'HtmlStyleElement',
    'Text',
    'CharacterData',
    'SvgsvgElement',
    'SvgPathElement',
    'MouseEvent',
    'Touch',
    'CssStyleDeclaration',
]

[features]
default = ["console_error_panic_hook"]
