[package]
name = "ss_freeform_format"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
itertools = "0.10.0"
either = "1.8.0"
rmp-serde = "1.1.0"
plist = "1.3.1"
svg2pdf = "0.4.0"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
