[package]
name = "ss_github_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dialoguer = "0.1.0"
# directories = "1.0.2"
serde = { version = "1.0.79", features = ["derive"] }
serde_json = "1.0.32"
surf = "2.0.0-alpha.5"
base64 = "0.12.3"
directories-next = "2.0.0"
futures = "0.3.25"