[package]
name = "ss_notebook_format_c_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.135"
core-graphics = "0.22.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
itertools = "0.10.0"
either = "1.8.0"
rand = "0.7.3"
lazy_static = "1.4.0"
rayon = "1.5.3"
skia-bindings = {version = "0.55.0", features = ['metal']}
skia-safe = {version = "0.55.0", features = ['metal']}

ss-notebook-format = {path = "../ss-notebook-format"}

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
