[package]
name = "ss-notebook-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
itertools = "0.10.0"
either = "1.8.0"
rand = "0.7.3"
geo = "0.23.0"
parry2d = "0.10.0"
num-traits = "0.2.15"
# skia-safe = "0.55.0"

skia-bindings = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi"}
skia-safe = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi"}

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]

# [patch.crates-io]
# skia-safe = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi"}
# skia-bindings = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi"}