[package]
name = "subscript_ast"
version = "0.1.0"
edition = "2021"


[dependencies]
html5ever = "0.25.1"
markup5ever = "0.10.0"
markup5ever_rcdom = "0.1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
grass = "0.10.4"
swc_css_parser = "0.123.4"
swc_css_ast = "0.114.4"
swc_css_visit = {version = "0.113.4", features = ['path']}
swc_common = "0.29.3"
swc_css_codegen = "0.124.4"
lazy_static = "1.4.0"
itertools = "0.10.0"
either = "1.8.0"
unicode-segmentation = "1.7.1"
regex = "1.6.0"
rmp-serde = "1.1.0"
plist = "1.3.1"
svg2pdf = "0.4.0"
rand = "0.7.3"
ss_freeform_format = {path = "../ss-freeform-format"}
