[package]
name = "subscript-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
structopt = "0.3.26"
toml = "0.5.9"
wax = "0.5.0"
poem = "1.3.43"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.15"
rmp-serde = "1.1.0"
subscript_compiler = {path = "../subscript-compiler"}

# [[bin]]
# name = "server"
# path = "src/server.rs"

