[package]
name = "vectorizable-demo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.135"
core-graphics = "0.22.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
itertools = "0.10.0"
either = "1.8.0"
rand = "0.7.3"
lazy_static = "1.4.0"
rayon = "1.5.3"
geo = "0.23.0"
parry2d = "0.10.0"
num-traits = "0.2.15"
# structopt = "0.3.26"
c_ffi_utils = {path = "../../c-ffi-utils"}
# vectorizable = {path = "../../vectorizable"}
skia-bindings = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi", features = ['metal']}
skia-safe = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi", features = ['metal']}

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]
# [patch.crates-io]
# skia-safe = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi"}
# skia-bindings = {git = "https://github.com/colbyn/rust-skia-x86_64-apple-ios-macabi"}

