[package]
name = "subscript-app-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.135"
core-graphics = "0.22.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
itertools = "0.10.0"
either = "1.8.0"
rand = "0.7.3"
lazy_static = "1.4.0"

